Added many fixes to the hoag hospital registry + strategy map, applied a fix to auth flow that changed after the update to increase minimum password length.