@@ -4,6 +4,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -13,7 +14,7 @@ import java.util.regex.Pattern;
  */
 @Component
 public class PasswordPolicyValidator {
-    private static final Pattern LEN_8_PLUS = Pattern.compile(".{8,}");
+    private static final Pattern LEN_12_PLUS = Pattern.compile(".{12,}");
     private static final Pattern HAS_DIGIT = Pattern.compile("\\d");
     private static final Pattern HAS_LETTER = Pattern.compile("\\p{L}");
     private static final Pattern HAS_SPECIAL = Pattern.compile("[!@#$%^&*()_+\\-={};':\"\\\\|,.<>/?`~]");
@@ -42,10 +43,10 @@ public class PasswordPolicyValidator {
     private Map<Pattern, String> buildPasswordRequirements() {
         // LinkedHashMap preserves check order so clients get deterministic first-failure messages.
         Map<Pattern, String> requirements = new LinkedHashMap<>();
-        requirements.put(LEN_8_PLUS, "Must be at least 8 characters");
+        requirements.put(LEN_12_PLUS, "Must be at least 12 characters");
         requirements.put(HAS_DIGIT, "Must contain at least one digit");
         requirements.put(HAS_LETTER, "Must contain at least one letter");
         requirements.put(HAS_SPECIAL, "Must contain at least one special character");
-        return Map.copyOf(requirements);
+        return Collections.unmodifiableMap(requirements);
     }
 }
